--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3322,7 +3322,7 @@ option {
 }
 
 .slide-inner-2{
- background: url(../images/slider/slide-3.jpg) no-repeat center center / cover;
+ background: url(../images/footer-bg.jpg) no-repeat center center / cover;
  height: 850px;
 }
 
