--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3042,7 +3042,7 @@ animation: spineer 2s infinite;
     right: -107px;
     top: -112px;
     content: "";
-    background: url(../images/rsvp/img-1.jpg) no-repeat center center / cover;
+    background: url(../images/rsvp/img-1.png) no-repeat center center / cover;
     width: 200px;
     height: 200px;
     z-index: -1;
