--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3321,9 +3321,8 @@ option {
   border-radius: 50%;
 }
 
-
 .slide-inner-2{
- background: url(../images/slide-3.jpg) no-repeat center center / cover;
+ background: url(../images/slider/slide-3.jpg) no-repeat center center / cover;
  height: 850px;
 }
 
