--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1795,7 +1795,7 @@ div#preloader {
 #0.5	footer
 --------------------------------------------------------------*/
 .site-footer {
-  background: url("../images/counter/1.jpg") center center/cover no-repeat local;
+  background: url("../images/counter/1-bkp.jpg") center center/cover no-repeat local;
   text-align: center;
   padding: 235px 0 250px;
   position: relative;
@@ -3007,7 +3007,7 @@ animation: spineer 2s infinite;
 }
 
 .rsvp-area {
-    background: url(../images/counter/1.jpg) no-repeat center center / cover;
+    background: url(../images/counter/1-bkp.jpg) no-repeat center center / cover;
     padding: 150px 0;
     position: relative;
     background-attachment: fixed;
