--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2487,7 +2487,7 @@ animation: spineer 2s infinite;
 =================================*/
 
 .cta-area {
-    background: url(../images/cta/img-1.jpg) no-repeat center center / cover;
+    background: url(../images/cta/1.jpg) no-repeat center center / cover;
     position: relative;
     background-attachment: fixed;
 }
