--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2117,7 +2117,7 @@ couple-area end
 }
 
 .count-down-area-2 {
-    background: url(../images/counter/1-rsvp.jpg) no-repeat center center / cover;
+    background: url(../images/counter/1.jpg) no-repeat center center / cover;
     background-attachment: fixed;
     position: relative;
 }
@@ -2498,6 +2498,24 @@ animation: spineer 2s infinite;
 }
 
 .cta-area:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: .8;
+}
+
+
+.cta-area-3 {
+    background: url(../images/cta/2.jpg) no-repeat center center / cover;
+    position: relative;
+    background-attachment: fixed;
+}
+
+.cta-area-3:before {
     content: "";
     position: absolute;
     top: 0;
